--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,357 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+#header {
+  color: #fff;
+  cursor: default;
+  height: 3.25em;
+  left: 0;
+  line-height: 3.25em;
+  position: absolute;
+  text-align: right;
+  top: 2em;
+  width: 100%;
+  z-index: 10001;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  #header .inner {
+    margin: 0 auto;
+    position: relative;
+  }
+
+  #header .logo {
+    color: #ffffff;
+    display: inline-block;
+    font-weight: 400;
+    height: inherit;
+    left: 0;
+    line-height: inherit;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    font-size: 1em;
+  }
+
+    #header .logo strong {
+      color: #ffffff;
+      font-weight: 600;
+    }
+
+  #header a {
+    -moz-transition: color 0.2s ease-in-out;
+    -webkit-transition: color 0.2s ease-in-out;
+    -ms-transition: color 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out;
+    display: inline-block;
+    padding: 0 0.75em;
+    color: inherit;
+    text-decoration: none;
+    font-size: 1em;
+  }
+
+    #header a:hover {
+      color: #ffffff;
+    }
+
+    #header a:last-child {
+      padding-right: 0;
+    }
+
+    #header a.navPanelToggle {
+      display: none;
+      text-decoration: none;
+      height: 4em;
+      width: 4em;
+      z-index: 10003;
+    }
+
+      #header a.navPanelToggle .fa {
+        font-size: 1.25em;
+      }
+
+      @media screen and (max-width: 980px) {
+
+        #header a.navPanelToggle {
+          display: inline-block;
+        }
+
+      }
+
+    @media screen and (max-width: 736px) {
+
+      #header a {
+        padding: 0 0.5em;
+      }
+
+    }
+
+@media screen and (max-width: 980px) {
+
+  #header {
+    top: 1em;
+  }
+
 }
+
+@media screen and (max-width: 736px) {
+
+  #header {
+    top: .5em;
+  }
+
+}
+
+@media screen and (max-width: 480px) {
+
+  #header {
+    font-size: .9em;
+  }
+
+}
+
+/* Nav */
+
+@media screen and (max-width: 980px) {
+
+  #nav {
+    display: none;
+  }
+
+}
+
+#navPanel {
+  -moz-transform: translatex(20em);
+  -webkit-transform: translatex(20em);
+  -ms-transform: translatex(20em);
+  transform: translatex(20em);
+  -moz-transition: -moz-transform 0.2s ease-in-out, visibility 0.2s ease-in-out;
+  -webkit-transition: -webkit-transform 0.2s ease-in-out, visibility 0.2s ease-in-out;
+  -ms-transition: -ms-transform 0.2s ease-in-out, visibility 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, visibility 0.2s ease-in-out;
+  -webkit-overflow-scrolling: touch;
+  visibility: hidden;
+  overflow-y: auto;
+  position: fixed;
+  right: 0;
+  top: 0;
+  background: #6cc091;
+  color: #daefe3;
+  height: 100%;
+  max-width: 80%;
+  width: 20em;
+  padding: 0.5em 1.25em;
+  z-index: 10010;
+}
+
+  #navPanel.visible {
+    -moz-transform: translatex(0);
+    -webkit-transform: translatex(0);
+    -ms-transform: translatex(0);
+    transform: translatex(0);
+    box-shadow: 0 0 1.5em 0 rgba(0, 0, 0, 0.2);
+    visibility: visible;
+  }
+
+  #navPanel a:not(.close) {
+    border-top: solid 1px #8dcca9;
+    color: #daefe3;
+    font-weight: 600;
+    display: block;
+    padding: 0.75em 0;
+    text-decoration: none;
+    font-weight: 400;
+  }
+
+    #navPanel a:not(.close):first-child {
+      border: none;
+    }
+
+  #navPanel .close {
+    text-decoration: none;
+    -moz-transition: color 0.2s ease-in-out;
+    -webkit-transition: color 0.2s ease-in-out;
+    -ms-transition: color 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out;
+    -webkit-tap-highlight-color: transparent;
+    border: 0;
+    color: #daefe3;
+    cursor: pointer;
+    display: block;
+    height: 4em;
+    padding-right: 1.25em;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
+    vertical-align: middle;
+    width: 5em;
+  }
+
+    #navPanel .close:before {
+      -moz-osx-font-smoothing: grayscale;
+      -webkit-font-smoothing: antialiased;
+      font-family: FontAwesome;
+      font-style: normal;
+      font-weight: normal;
+      text-transform: none !important;
+      content: '\f00d';
+      width: 3em;
+      height: 3em;
+      line-height: 3em;
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 0;
+      text-align: center;
+    }
+
+    #navPanel .close:hover {
+      color: inherit;
+    }
+
+/* Banner */
+
+#banner {
+  padding: 8em 0 9em 0;
+  background-image: url(./assets/banner-2.png);/*url(../assets/banner-2.png);*/
+  background-size: cover;
+  background-position: bottom;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  text-align: center;
+  position: relative;
+}
+
+  #banner:before {
+    content: '';
+    background: rgba(75, 75, 93, 0.6);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+
+  #banner .inner {
+    border-top: 2px solid rgba(255, 255, 255, 0.2);
+    position: relative;
+    z-index: 10005;
+    padding-top: 8em;
+  }
+
+  #banner h1 {
+    font-size: 3.5em;
+    font-weight: 400;
+    color: #fff;
+    line-height: 1em;
+    margin: 0 0 1em 0;
+    padding: 0;
+  }
+
+  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+
+    #banner {
+      background-attachment: scroll;
+    }
+
+  }
+
+  @media screen and (max-width: 1680px) {
+
+    #banner .flex div {
+      padding: 0 6em;
+    }
+
+  }
+
+  @media screen and (max-width: 1280px) {
+
+    #banner {
+      padding: 7em 0 6em 0;
+    }
+
+      #banner .inner {
+        padding-top: 6em;
+      }
+
+      #banner h1 {
+        font-size: 3em;
+      }
+
+      #banner h3 {
+        font-size: 1.25em;
+      }
+
+      #banner .flex div {
+        padding: 0 3em;
+      }
+
+  }
+
+  @media screen and (max-width: 980px) {
+
+    #banner {
+      background-attachment: scroll;
+      padding: 5em 0 4em 0;
+    }
+
+      #banner .inner {
+        padding-top: 4em;
+      }
+
+      #banner h1 {
+        font-size: 2.5em;
+      }
+
+      #banner h3 {
+        font-size: 1.25em;
+      }
+
+      #banner .flex div {
+        font-size: .85em;
+        padding: 0 1.5em;
+      }
+
+  }
+
+  @media screen and (max-width: 736px) {
+
+    #banner {
+      padding: 4em 0 3em 0;
+    }
+
+      #banner .inner {
+        padding-top: 3em;
+      }
+
+      #banner h1 {
+        font-size: 2em;
+      }
+
+      #banner h3 {
+        font-size: 1.25em;
+      }
+
+      #banner .flex {
+        -moz-flex-direction: column;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        margin: 0 auto 2em auto;
+      }
+
+        #banner .flex div {
+          font-size: .85em;
+          padding: 0;
+          border: none;
+          margin-bottom: 1em;
+        }
+
+  }
+
+  @media screen and (max-width: 480px) {
+
+    #banner h1 {
+      font-size: 1.5em;
+    }
+
+  }
